--- a/SurveryForm/rough/style.css
+++ b/SurveryForm/rough/style.css
@@ -157,7 +157,7 @@ form {
 
 .input-radio,
 .input-checkbox {
-  display: inline-block;
+  display: inline;
   margin-right: 0.625rem;
   min-height: 1.25rem;
   min-width: 1.25rem;
