--- a/Product-landing-page/style.css
+++ b/Product-landing-page/style.css
@@ -3,6 +3,7 @@
 :root {
 	--h2-color: #303030;
 	--sub-heading: #d1d1d1;
+	--text-color: #5c5c5c;
 }
 
 body, html {
@@ -12,17 +13,20 @@ body, html {
 	transition: ease all 0.5s;
 	background: #fff;
 	scroll-behavior: smooth;
+	color: var(--text-color);
 }
 
 
 #header {
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 	padding: 0.5rem 3rem 0.4rem 3rem;
 	background-color: #fff;
 	box-shadow: rgba(99, 99, 99, 0.2) 0px 1px 5px 0px;
 	position: sticky;
 	top: 0;
+	z-index: 10;
 }
 
 .left h1 {
@@ -34,20 +38,17 @@ body, html {
 	padding: 0 4%;
 }
 
-.right {
-	/*padding: 0 4%;*/
-}
-
-ul{
-	display: flex;
-	justify-content: space-around;
-}
-
-li a {
-	text-decoration: none;
+#nav-bar > a{
+	margin: 0 1rem 0 1rem;
 	color: #3b3b3b;
+	outline: 0;
+	text-decoration: none;
 }
 
+#nav-bar > a:hover {
+	text-decoration: underline;
+
+}
 
 .nav-link {
 	list-style-type: none;
@@ -62,34 +63,70 @@ li a {
 #home {
 	display: grid;
 	grid-template-columns: 2fr 1fr;
-	height: 50vh;
+	height: 29rem;
 	background:linear-gradient(135deg, #3c1387 ,#7453b0 );
 	color: #fdfaff;
 }
 
+.download-btn {
+	border: 0;
+	outline: 0;
+	text-transform: uppercase;
+	font-size: 1rem;
+	padding: 1.2rem;
+	border-radius: 5px;
+	overflow: hidden;
+	background: #fff;
+	margin-top: 4rem;
+	color: #2c056e;
+}
+
+.download-btn:hover {
+	background:linear-gradient(135deg, #542d9c, #7453b0 );
+	color: #fff;
+	/*border: 2px solid #fff;*/
+	transition: ease-in all 0.5;
+	cursor: pointer;
+	box-sizing: border-box;
+}
 
 @media (max-width: 820px) {
 	#home {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		height: 90vh;
+		height: 48rem;
 	}
 
 	#header {
 		flex-wrap: wrap;
 		justify-content: center;
 	}
+	ul {
+		flex-wrap: wrap;
+		justify-content: center;
+	}
 }
-section {
-	scroll-margin-top: 1em;
+
+@media (max-width: 580px) {
+	#nav-bar > a{
+		margin-top: 1rem;
+	}
+
 }
+
+/*=========== Hash Links ===========*/
+
+a {
+	padding-top: 290px;
+}
+
 @media (max-width: 800px) {
 	#home {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		height: 90vh;
+		height: 45rem;
 	}
 
 	.left h1 {
@@ -100,11 +137,22 @@ section {
 		font-size: 1.1rem;
 	}
 }
+
+@media (max-width: 570px) {
+	#home {
+		height: 55rem;
+	}
+
+	.download-btn {
+		margin-top: 1rem;
+		margin-bottom: 4rem;
+	}
+}
 /* ============ All About About ============*/
 #about {
-	margin: 10rem 0 5rem 0;
+	/*margin: 10rem 0 5rem 0;*/
 	text-align: center;
-	scroll-margin-top: 1em;
+	padding: 5rem 5rem 5rem 5rem;
 }
 
 #about .container{
@@ -118,7 +166,7 @@ section {
 }
 
 .card {
-	border: 1px solid #e3e3e3;
+	/*border: 1px solid #e2d7f5;*/
 	margin: 1rem;
 	width: 20rem;
 	height: 13rem;
@@ -127,14 +175,18 @@ section {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	box-shadow: rgba(226, 215, 245, 0.3) 0px 10px 15px 1px, rgba(226, 215, 245, 0.04) 0px 4px 6px -2px;
+}
+
+.card:hover {
+	box-shadow: rgba(226, 215, 245, 0.4) 0px 10px 15px -1px, rgba(226, 215, 245, 0.9) 0px 4px 6px -2px;
 }
 
 .card i {
-	/*color: #927aff;*/
 	color: #7669b3;
 }
 
-h2 {
+.sub-heading {
 	font-size: 2rem;
 	color: var(--h2-color);
 }
@@ -145,10 +197,11 @@ h2 {
 
 }
 
-@media (max-width: 820px) {
+@media (max-width: 1020px) {
 
 	#about {
-		margin-top: 3rem;
+		margin-top: 2rem;
+		padding-top: 5rem;
 	}
 
 	#about .container {
@@ -165,14 +218,35 @@ h2 {
 	}
 }
 
+@media (max-width: 820px) {
+	#about {
+		flex-wrap: wrap;
+		margin: 0;
+		padding: 0;
+		padding-right: 1rem;
+		padding-left: 1rem;
+		padding-top: 6.3rem;
+	}
+}
+
+@media (max-width: 590px) {
+	#about {
+		flex-wrap: wrap;
+		margin: 0;
+		padding-top: 7rem;
+	}
+}
+
 /* ============ All about Features ============*/
 #features {
 	background: #f5f5f5;
 	margin: 0 0 5rem 0;
-	padding: 2rem 3.5rem;
+	padding: 3rem 10rem;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	flex-wrap: wrap;
+	justify-content: center;
 }
 
 #feature-info {
@@ -182,8 +256,10 @@ h2 {
 #features > iframe {
 	max-width: 520px;
 	width: 100%;
-	border: 1px solid grey;
+	border: none;
+	/*border: 1px solid grey;*/
 	border-radius: 5px;
+	outline: 0;
 
 }
 
@@ -191,11 +267,179 @@ h2 {
 	#features {
 		flex-wrap: wrap;
 		justify-content: center;
+		padding: 3rem 1rem;
 	}
 }
 
 @media (max-width: 820px) {
 	#features {
-		padding: 1.1rem;
+		padding: 5.7rem 0.3rem 0 0.2rem;
 	}
+}
+
+/*=============== All about Pricing =================*/
+#pricing {
+	padding-top: 5rem;
+	display: flex;
+	justify-content: center;
+}
+
+.price-card {
+	/*border: 1px solid grey;*/
+	box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
+	padding: 0;
+	margin: 1rem;
+	width: 15rem;
+	border-radius: 5px;
+	overflow: hidden;
+}
+
+.price-card:hover {
+	box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+	transform: translateY(-1px);
+	transition: ease all 0.3s;
+}
+
+.price {
+	padding: 0.3rem;
+	margin-top: 1.2rem;
+	border-bottom: 1px solid grey;
+}
+
+.price-content {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding-bottom: 1rem;
+}
+
+.price-content h4 {
+	font-size: 3rem;
+	color: #343434;
+	margin-bottom: 1.7rem;
+}
+
+.price-card h3 {
+	margin: 0;
+	padding: 1rem;
+	font-size: 0.9rem;
+	text-transform: uppercase;
+}
+
+.pack-basic, 
+.pack-premium{
+	background:linear-gradient(90deg, #e8e8e8 ,#ebebeb);
+	color: #343434;
+}
+.pack-optimal {
+	background:linear-gradient(135deg, #3c1387 ,#7453b0 );
+	color: #fff;
+}
+.planbtn {
+	width: 85%;
+	padding: 1rem;
+	border: 1px solid rgba(35,35,35,.1);
+	border-radius: 30px;
+	font-size: 0.9rem;
+	font-weight: lighter;
+	text-transform: uppercase;
+	outline: none;
+	cursor: pointer;
+	background: #fff;
+	overflow: hidden;
+}
+.planbtn:hover {
+	background:linear-gradient(135deg, #3c1387 ,#7453b0 );
+	color: #fff;
+}
+
+.planbtn-optimal {
+	border: 1px solid #7453b0;
+}
+
+@media (max-width: 620px) {
+	#pricing {
+		flex-wrap: wrap;
+	}
+	#header {
+		z-index: 10;
+	}
+
+	.price-card {
+		width: 20rem;
+	}
+}
+
+/* =============== All about the Contact Section ==============*/
+
+#contact{
+	text-align: center;
+	padding-top: 5rem;
+}
+
+#form {
+	display: flex;
+	justify-content: center;
+}
+
+.contact-logo {
+	padding-top: 2rem;
+	max-width: 100%;
+	height: auto;
+}
+
+#email {
+	padding: 0.5rem;
+	font-size: 1.5rem;
+	border: 1px solid #c6aee6;
+	border-radius: 5px;
+	outline: 0;
+	width: 35rem;
+}
+
+#email:focus {
+	box-shadow: 0 0 0 0.1rem rgba(70, 42, 250, 0.32);
+}
+
+#submit {
+	padding: 0.87rem;
+	border: 0;
+	border-radius: 4px;
+	outline: 0;
+	color: #fff;
+	background-color: #41258a;
+	font-size: 1rem;
+}
+
+#submit:hover {
+	background-color: #8e7dba;
+	cursor: pointer;
+}
+
+.form-group {
+	margin: 0.2rem;
+}
+
+@media (max-width: 720px) {
+	#form {
+		text-align: center;
+		display: block;		
+	}
+
+	#email {
+		width: 25rem;
+	}
+
+}
+
+@media (max-width: 596px) {
+	#form {
+		text-align: center;
+		display: block;		
+	}
+
+	#email {
+		width: 20rem;
+	}
+
 }
