--- a/Technical-document-page/style.css
+++ b/Technical-document-page/style.css
@@ -3,6 +3,10 @@
 	padding: 0;
 }
 
+html {
+	scroll-behavior: smooth;
+}
+
 body {
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
     'Helvetica Neue', Arial, sans-serif;
@@ -14,23 +18,27 @@ body {
     box-sizing: border-box;	
 }
 
-.section-div {
-	background: #fff;
-	margin: 3rem 1rem 5rem 19.69rem;
-	padding: 1rem;
-	box-shadow: rgba(99, 99, 99, 0.1) 0px 2px 7px 0px;
+::-moz-selection { /* Code for Firefox */
+  color: #fff;
+  background: #121212;
 }
 
-/*#main-doc {
-  margin: 0 10px 50px 310px;
-  padding: 40px;
-  margin-bottom: 50px;
-  font-size: 1.06rem;
-}*/
+::selection {
+  color: #fff;
+  background: #121212;
+}
+
+.section-div {
+	background: #fff;
+	margin: 3rem 1rem 5rem 21.5rem;
+	padding: 3rem 3rem 3rem 3rem;
+	box-shadow: rgba(99, 99, 99, 0.1) 0px 2px 7px 0px;
+	font-size: 1.02rem;
+}
 
 #navbar {
 	position: fixed;
-	min-width: 290px;
+	min-width: 320px;
 	top: 0px;
 	left: 0px;
 	width: 300px;
@@ -44,19 +52,20 @@ nav header {
 	flex-direction: column;
 	align-items: center;
 	margin-top: 1rem;
+	color: #fff;
 }
 
-ul {
+.nav-ul {
 	margin: 10px;
 }
 
-li a{
+.nav-ul li a{
 	text-decoration: none;
 	color: #ededed;
 	font-size: 1.1rem;
 }
 
-li {
+.nav-ul > li {
 	/*margin: 1rem 0.2rem 0.5rem 0.2rem;*/
 	margin: 1rem 1rem;
 	list-style-type: none;
@@ -66,12 +75,12 @@ li {
 	border-left: 3px solid #44bcc9;
 }
 
-li:hover {	
+.nav-ul li:hover {	
 	animation: change-bg 0.7s;
 	animation-fill-mode: forwards;
 }
 
-li a:hover {
+.nav-ul li a:hover {
 	color: #fff;
 }
 
@@ -84,12 +93,128 @@ li a:hover {
 section header {
 	margin: 1rem 0;
 	text-align: left;
-	font-size: 2.4rem;
+	font-size: 2rem;
 }
 
+section {
+	margin-bottom: 2rem;
+}
 
-@media (max-width: 520px) {
-	nav {
-		display: hidden;
+@media (max-width: 1020px) {
+	#navbar {
+		display: none;
+	}
+
+	.section-div {
+		margin: 5px;
+		padding: 1rem;
 	}
 }
+
+ul {
+	margin-left: 3rem;
+}
+
+/**********************************************************************
+							<CUSTOM>
+**********************************************************************/
+
+/* CODE */
+.code {
+	margin-top: 1rem;
+	margin-bottom: 1rem;
+	font-family: monospace;
+	font-size: 1.1rem;	
+	background: #272c33;
+	color: white;
+	line-height: 1.7;
+	white-space: pre-line;
+	padding: 0 5px 15px 15px;
+	border-left: 4px solid #61d8ed;
+	display: block;
+	position: relative;
+}
+
+/*  SYNTAX HIGHLIGHTING */
+keyword {
+	color: #fcbf44;
+}
+identifier {
+	color: #e08916;
+}
+
+string {
+	color: #9dcc31;
+}
+
+keyword2 {
+	color: #ed724a;
+}
+
+console {
+	color: #16b1e0;
+}
+
+arg {
+	color: #c87ff5;
+}
+
+.br { 
+	display: block; 
+	margin-bottom: 0.8rem; 
+} 
+
+.inline-code {
+	background: #ebebeb;
+	font-family: monospace;
+	font-size: 1.1rem;
+	padding: 0 0.3rem;
+	border-radius: 3px;
+	color: #d13854;
+}
+
+.npm-code {
+	margin-top: 1rem;
+	font-family: monospace;
+	font-size: 1.1rem;	
+	background: #272c33;
+	color: white;
+	line-height: 1.7;
+	white-space: pre-line;
+	padding: 0 5px 3px 15px;
+	margin-bottom: 1rem;
+}
+
+.file {
+	position: absolute;
+	left: 5px;
+	top: 1px;
+	border-bottom: 1px solid white;
+	font-weight: bold;
+}
+
+img {
+	max-width: 100%;
+	height: auto;
+	display: block;
+}
+
+.html-css {
+  display: block;
+  text-align: left;
+  white-space: pre-line;
+  position: relative;
+  word-break: normal;
+  word-wrap: normal;
+  line-height: 2;
+  background-color: #f7f7f7;
+  padding: 15px;
+  margin: 15px;
+  border-radius: 5px;
+  overflow-y: auto;
+  overflow-x: auto;
+}
+
+/**********************************************************************
+							</CUSTOM>
+**********************************************************************/
