--- a/Technical-document-page/style.css
+++ b/Technical-document-page/style.css
@@ -1,118 +1,160 @@
 * {
-	margin: 0;
-	padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 html {
-	scroll-behavior: smooth;
+    scroll-behavior: smooth;
 }
 
 body {
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
-    'Helvetica Neue', Arial, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+        'Helvetica Neue', Arial, sans-serif;
     min-width: 290px;
     color: #4d4e53;
     background: #fff;
     line-height: 1.5;
     background: #f0f9fa;
-    box-sizing: border-box;	
+    box-sizing: border-box;
 }
 
-::-moz-selection { /* Code for Firefox */
-  color: #fff;
-  background: #121212;
+::-moz-selection {
+    /* Code for Firefox */
+    color: #fff;
+    background: #121212;
 }
 
 ::selection {
-  color: #fff;
-  background: #121212;
+    color: #fff;
+    background: #121212;
 }
 
 .section-div {
-	background: #fff;
-	margin: 3rem 1rem 5rem 21.5rem;
-	padding: 3rem 3rem 3rem 3rem;
-	box-shadow: rgba(99, 99, 99, 0.1) 0px 2px 7px 0px;
-	font-size: 1.02rem;
+    background: #fff;
+    margin: 3rem 1rem 1rem 21.5rem;
+    padding: 3rem 3rem 3rem 3rem;
+    box-shadow: rgba(99, 99, 99, 0.1) 0px 2px 7px 0px;
+    font-size: 1.02rem;
 }
 
 #navbar {
-	position: fixed;
-	min-width: 320px;
-	top: 0px;
-	left: 0px;
-	width: 300px;
-	height: 100%;
-	background: #121212;
+    position: fixed;
+    min-width: 320px;
+    top: 0px;
+    left: 0px;
+    width: 300px;
+    height: 100%;
+    background: #121212;
 }
 
 
 nav header {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	margin-top: 1rem;
-	color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 2rem 0 1rem 0;
+    padding-bottom: 2rem;
+    color: #fff;
+}
+
+nav footer {
+    display: flex;
+    justify-content: center;
+}
+
+nav footer * {
+    margin: 0.5rem 0.5rem;
+    color: white;
+}
+
+.footer-wrapper a {
+    text-decoration: none;
+}
+
+.footer-wrapper a:hover {
+    color: #52bafa;
+    text-decoration: underline;
+}
+
+.footer-wrapper {
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    color: #fff;
 }
 
 .nav-ul {
-	margin: 10px;
+    margin: 2.9rem 0.7rem 1rem 0.7rem;
 }
 
-.nav-ul li a{
-	text-decoration: none;
-	color: #ededed;
-	font-size: 1.1rem;
+hr {
+    border: none;
+    border-bottom: 1px solid #78c3cf;
 }
 
-.nav-ul > li {
-	/*margin: 1rem 0.2rem 0.5rem 0.2rem;*/
-	margin: 1rem 1rem;
-	list-style-type: none;
-	border-radius: 5px;
-	padding-left: 1rem;
-	border-right: 3px solid #44bcc9;
-	border-left: 3px solid #44bcc9;
+.nav-ul li a {
+    text-decoration: none;
+    color: #ededed;
+    font-size: 1.1rem;
 }
 
-.nav-ul li:hover {	
-	animation: change-bg 0.7s;
-	animation-fill-mode: forwards;
+.nav-ul>li {
+    /*margin: 1rem 0.2rem 0.5rem 0.2rem;*/
+    margin: 1rem 1rem;
+    list-style-type: none;
+    border-radius: 5px;
+    padding-left: 1rem;
+    border-right: 3px solid #44bcc9;
+    border-left: 3px solid #44bcc9;
+}
+
+.nav-ul li:hover {
+    animation: change-bg 0.7s;
+    animation-fill-mode: forwards;
 }
 
 .nav-ul li a:hover {
-	color: #fff;
+    color: #fff;
 }
 
 @keyframes change-bg {
-	100% {
-		background: #2b2b2b;
-	}
+    100% {
+        background: #2b2b2b;
+    }
+}
+
+.ref-link {
+	color: #5ab7c7;
+	text-decoration: none;
+}
+
+.ref-link:hover {
+	color: #262626;
 }
 
 section header {
-	margin: 1rem 0;
-	text-align: left;
-	font-size: 2rem;
+    margin: 1rem 0;
+    text-align: left;
+    font-size: 2rem;
 }
 
 section {
-	margin-bottom: 2rem;
+    margin-bottom: 2rem;
 }
 
 @media (max-width: 1020px) {
-	#navbar {
-		display: none;
-	}
+    #navbar {
+        display: none;
+    }
 
-	.section-div {
-		margin: 5px;
-		padding: 1rem;
-	}
+    .section-div {
+        margin: 5px;
+        padding: 1rem;
+    }
 }
 
 ul {
-	margin-left: 3rem;
+    margin-left: 3rem;
 }
 
 /**********************************************************************
@@ -121,102 +163,103 @@ ul {
 
 /* CODE */
 .code {
-	margin-top: 1rem;
-	margin-bottom: 1rem;
-	font-family: monospace;
-	font-size: 1.1rem;	
-	background: #272c33;
-	color: white;
-	line-height: 1.7;
-	white-space: pre-line;
-	padding: 0 5px 15px 15px;
-	border-left: 4px solid #61d8ed;
-	display: block;
-	position: relative;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    font-family: monospace;
+    font-size: 1.1rem;
+    background: #272c33;
+    color: white;
+    line-height: 1.7;
+    white-space: pre-line;
+    padding: 0 5px 15px 15px;
+    border-left: 4px solid #61d8ed;
+    display: block;
+    position: relative;
 }
 
 /*  SYNTAX HIGHLIGHTING */
 keyword {
-	color: #fcbf44;
+    color: #fcbf44;
 }
+
 identifier {
-	color: #e08916;
+    color: #e08916;
 }
 
 string {
-	color: #9dcc31;
+    color: #9dcc31;
 }
 
 keyword2 {
-	color: #ed724a;
+    color: #ed724a;
 }
 
 console {
-	color: #16b1e0;
+    color: #16b1e0;
 }
 
 arg {
-	color: #c87ff5;
+    color: #c87ff5;
 }
 
-.br { 
-	display: block; 
-	margin-bottom: 0.8rem; 
-} 
+.br {
+    display: block;
+    margin-bottom: 0.8rem;
+}
 
 .inline-code {
-	background: #ebebeb;
-	font-family: monospace;
-	font-size: 1.1rem;
-	padding: 0 0.3rem;
-	border-radius: 3px;
-	color: #d13854;
+    background: #ebebeb;
+    font-family: monospace;
+    font-size: 1.1rem;
+    padding: 0 0.3rem;
+    border-radius: 3px;
+    color: #d13854;
 }
 
 .npm-code {
-	margin-top: 1rem;
-	font-family: monospace;
-	font-size: 1.1rem;	
-	background: #272c33;
-	color: white;
-	line-height: 1.7;
-	white-space: pre-line;
-	padding: 0 5px 3px 15px;
-	margin-bottom: 1rem;
+    margin-top: 1rem;
+    font-family: monospace;
+    font-size: 1.1rem;
+    background: #272c33;
+    color: white;
+    line-height: 1.7;
+    white-space: pre-line;
+    padding: 0 5px 3px 15px;
+    margin-bottom: 1rem;
 }
 
 .file {
-	position: absolute;
-	left: 5px;
-	top: 1px;
-	border-bottom: 1px solid white;
-	font-weight: bold;
+    position: absolute;
+    left: 5px;
+    top: 1px;
+    border-bottom: 1px solid white;
+    font-weight: bold;
 }
 
 img {
-	max-width: 100%;
-	height: auto;
-	/*display: block;*/
+    max-width: 100%;
+    height: auto;
+    /*display: block;*/
 }
 
 .img-div {
-	text-align: center;
+    text-align: center;
 }
 
 .html-css {
-  display: block;
-  text-align: left;
-  white-space: pre-line;
-  position: relative;
-  word-break: normal;
-  word-wrap: normal;
-  line-height: 2;
-  background-color: #f7f7f7;
-  padding: 15px;
-  margin: 15px;
-  border-radius: 5px;
-  overflow-y: auto;
-  overflow-x: auto;
+    display: block;
+    text-align: left;
+    white-space: pre-line;
+    position: relative;
+    word-break: normal;
+    word-wrap: normal;
+    line-height: 2;
+    background-color: #f7f7f7;
+    padding: 15px;
+    margin: 15px;
+    border-radius: 5px;
+    overflow-y: auto;
+    overflow-x: auto;
 }
 
 /**********************************************************************
