--- a/Personal-portfolio/style.css
+++ b/Personal-portfolio/style.css
@@ -70,7 +70,15 @@ nav a:hover .code {
     line-height: 1;
     margin: 0;
     padding: 0;
+    font-size: 0.9rem;
   }
+
+}
+
+@media (max-width: 650px) {
+  .navlinks li {
+    margin: 1rem 2rem;
+  } 
 }
 
 #welcome-section {
